[gd_scene load_steps=11 format=2]

[ext_resource path="res://managers/transitionManager/transitionManager.gd" type="Script" id=1]
[ext_resource path="res://themes/fonts/lmodern_sans_32px.tres" type="DynamicFont" id=2]
[ext_resource path="res://themes/fonts/lmodern_bold_48px.tres" type="DynamicFont" id=3]
[ext_resource path="res://icon.png" type="Texture" id=4]

[sub_resource type="Animation" id=6]
resource_name = "spinningProgress"
length = 4.0
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("TextureProgress:rect_rotation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 4 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 0.0, 360.0 ]
}

[sub_resource type="StyleBoxFlat" id=3]
bg_color = Color( 0.0588235, 0.0627451, 0.25098, 1 )
corner_detail = 20

[sub_resource type="StyleBoxFlat" id=4]
bg_color = Color( 0.568627, 0.45098, 0.407843, 1 )
border_width_left = 10
border_width_top = 10
border_width_right = 10
border_width_bottom = 10
border_color = Color( 0.180392, 0.141176, 0.129412, 1 )
border_blend = true
expand_margin_left = 10.0
expand_margin_right = 10.0
expand_margin_top = 10.0
expand_margin_bottom = 10.0

[sub_resource type="Animation" id=2]
resource_name = "fadeFromBlack"
tracks/0/type = "value"
tracks/0/path = NodePath("transitionEffects/fadeBlack:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ true, false ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("transitionEffects/fadeBlack/fadeBlackColorRect:color")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 0, 0, 0, 1 ), Color( 0, 0, 0, 0 ) ]
}

[sub_resource type="Animation" id=5]
resource_name = "fadeLoadingScreen"
tracks/0/type = "value"
tracks/0/path = NodePath("loadingScreen/loadingBg:modulate")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("loadingScreen/CenterContainer:modulate")
tracks/1/interp = 2
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ) ]
}

[sub_resource type="Animation" id=1]
resource_name = "fadeToBlack"
tracks/0/type = "value"
tracks/0/path = NodePath("transitionEffects/fadeBlack:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("transitionEffects/fadeBlack/fadeBlackColorRect:color")
tracks/1/interp = 2
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 0.203063 ),
"update": 0,
"values": [ Color( 0, 0, 0, 0 ), Color( 0, 0, 0, 1 ) ]
}

[node name="transitionManager" type="Node"]
pause_mode = 2
script = ExtResource( 1 )

[node name="loadingScreen" type="CanvasLayer" parent="."]
layer = 99

[node name="loadingBg" type="ColorRect" parent="loadingScreen"]
modulate = Color( 1, 1, 1, 0 )
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0.392157, 0.266667, 0.223529, 1 )

[node name="CenterContainer" type="CenterContainer" parent="loadingScreen"]
modulate = Color( 1, 1, 1, 0 )
anchor_right = 1.0
anchor_bottom = 1.0

[node name="VBoxContainer" type="VBoxContainer" parent="loadingScreen/CenterContainer"]
pause_mode = 2
margin_left = 704.0
margin_top = 456.0
margin_right = 1216.0
margin_bottom = 624.0

[node name="CenterContainer" type="CenterContainer" parent="loadingScreen/CenterContainer/VBoxContainer"]
pause_mode = 2
visible = false
margin_right = 512.0
margin_bottom = 64.0

[node name="TextureProgress" type="TextureRect" parent="loadingScreen/CenterContainer/VBoxContainer/CenterContainer"]
pause_mode = 2
margin_left = 224.0
margin_right = 288.0
margin_bottom = 64.0
rect_pivot_offset = Vector2( 32, 32 )
texture = ExtResource( 4 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="loadingScreen/CenterContainer/VBoxContainer/CenterContainer"]
pause_mode = 2
anims/spinningProgress = SubResource( 6 )

[node name="loadingLabel" type="Label" parent="loadingScreen/CenterContainer/VBoxContainer"]
margin_right = 512.0
margin_bottom = 69.0
custom_fonts/font = ExtResource( 3 )
text = "Loading..."
align = 1
valign = 1

[node name="Control" type="Control" parent="loadingScreen/CenterContainer/VBoxContainer"]
margin_top = 73.0
margin_right = 512.0
margin_bottom = 97.0
rect_min_size = Vector2( 0, 24 )

[node name="ProgressBar" type="ProgressBar" parent="loadingScreen/CenterContainer/VBoxContainer"]
margin_top = 101.0
margin_right = 512.0
margin_bottom = 168.0
rect_min_size = Vector2( 512, 64 )
custom_fonts/font = ExtResource( 2 )
custom_styles/fg = SubResource( 3 )
custom_styles/bg = SubResource( 4 )

[node name="transitionEffects" type="CanvasLayer" parent="."]
pause_mode = 2
layer = 100
visible = false

[node name="fadeBlack" type="Control" parent="transitionEffects"]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 1

[node name="fadeBlackColorRect" type="ColorRect" parent="transitionEffects/fadeBlack"]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0, 0, 0, 1 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/fadeFromBlack = SubResource( 2 )
anims/fadeLoadingScreen = SubResource( 5 )
anims/fadeToBlack = SubResource( 1 )

[node name="Tween" type="Tween" parent="."]
pause_mode = 2
